// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Connection render test connection 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <button
      class="bp3-button StyledProps--font Button--button StyledProps--main testButton"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Test Connection
      </span>
    </button>
  </div>
</div>
`;

exports[`Test Connection render test connection verify existing delegate  1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <button
      class="bp3-button StyledProps--font Button--button StyledProps--main testButton"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Test Connection
      </span>
    </button>
  </div>
</div>
`;

exports[`Test Connection render test connection verify existing delegate  2`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-right-small StyledProps--padding-left-small"
    >
      <p
        class="StyledProps--font StyledProps--main heading StyledProps--font-medium"
      >
        Verify Connection to
         
        <span
          class="name"
        >
          Test Connector
        </span>
      </p>
      <div
        class="Layout--vertical Layout--layout-spacing-large StyledProps--main StepsProgress--stepsProgress"
        id="steps-progress"
      >
        <div
          class="StepsProgress--progressBar"
        >
          <div
            class="bp3-progress-bar bp3-intent-danger bp3-no-stripes StepsProgress--progressHeight"
          >
            <div
              class="bp3-progress-meter"
              style="width: 66.66666666666666%;"
            />
          </div>
        </div>
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
        >
          <div
            class="StepsProgress--stepWrap"
          >
            <span
              class="bp3-icon bp3-icon-tick StyledProps--main StyledProps--color StyledProps--color-green500 StyledProps--margin-right-small"
              icon="tick"
            >
              <svg
                data-icon="tick"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  tick
                </desc>
                <path
                  d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font StyledProps--main"
              style="font-weight: bold;"
            >
              Delegate found: Sample Delegate Name 
            </p>
          </div>
          <div
            class="StepsProgress--stepWrap"
          >
            <span
              class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500 StyledProps--margin-right-small"
              icon="error"
            >
              <svg
                data-icon="error"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  error
                </desc>
                <path
                  d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font StyledProps--main"
              style=""
            >
              Delegate Connection Failed
            </p>
          </div>
          <div
            class="StepsProgress--stepWrap"
          >
            <span
              class="bp3-icon bp3-icon-blank StyledProps--main StyledProps--color StyledProps--color-yellow500 StyledProps--margin-right-small"
              icon="blank"
            >
              <svg
                data-icon="blank"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  blank
                </desc>
              </svg>
            </span>
            <p
              class="StyledProps--font StyledProps--main"
              style="font-weight: normal;"
            >
              Verifying connection
            </p>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal StyledProps--main StyledProps--margin-left-small"
      >
        <button
          class="bp3-button bp3-minimal StyledProps--font Button--button StyledProps--main StyledProps--intent-primary StyledProps--padding-left-large StyledProps--margin-top-small StyledProps--font-size-small"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            RETEST CONNECTION
          </span>
        </button>
        <button
          class="bp3-button bp3-minimal StyledProps--font Button--button StyledProps--main StyledProps--intent-primary StyledProps--padding-left-large StyledProps--margin-top-small StyledProps--font-size-small"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            CLOSE
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test Connection render test connection verify out of cluster  1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <button
      class="bp3-button StyledProps--font Button--button StyledProps--main testButton"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Test Connection
      </span>
    </button>
  </div>
</div>
`;

exports[`Test Connection render test connection verify out of cluster  2`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-small"
      style="height: 100%;"
    >
      <div
        class="Layout--vertical StyledProps--main"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-medium StyledProps--color StyledProps--color-grey700 StyledProps--padding-right-small StyledProps--padding-left-small"
        >
          Verify Connection to 
           
          <span
            class="name"
          >
            Test Connector
          </span>
        </p>
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main StepsProgress--stepsProgress"
          id="steps-progress"
        >
          <div
            class="StepsProgress--progressBar"
          >
            <div
              class="bp3-progress-bar bp3-intent-danger bp3-no-stripes StepsProgress--progressHeight"
            >
              <div
                class="bp3-progress-meter"
                style="width: 66.66666666666666%;"
              />
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
          >
            <div
              class="StepsProgress--stepWrap"
            >
              <span
                class="bp3-icon bp3-icon-tick StyledProps--main StyledProps--color StyledProps--color-green500 StyledProps--margin-right-small"
                icon="tick"
              >
                <svg
                  data-icon="tick"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    tick
                  </desc>
                  <path
                    d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main"
                style="font-weight: bold;"
              >
                1 delegate found
              </p>
            </div>
            <div
              class="StepsProgress--stepWrap"
            >
              <span
                class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500 StyledProps--margin-right-small"
                icon="error"
              >
                <svg
                  data-icon="error"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    error
                  </desc>
                  <path
                    d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main"
                style=""
              >
                Delegate Connection Failed
              </p>
            </div>
            <div
              class="StepsProgress--stepWrap"
            >
              <span
                class="bp3-icon bp3-icon-blank StyledProps--main StyledProps--color StyledProps--color-yellow500 StyledProps--margin-right-small"
                icon="blank"
              >
                <svg
                  data-icon="blank"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    blank
                  </desc>
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main"
                style="font-weight: normal;"
              >
                Verifying Connection
              </p>
            </div>
          </div>
        </div>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--margin-left-small"
        >
          <button
            class="bp3-button bp3-minimal StyledProps--font Button--button StyledProps--main StyledProps--intent-primary StyledProps--padding-left-large StyledProps--margin-top-small StyledProps--font-size-small"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              RETEST CONNECTION
            </span>
          </button>
          <button
            class="bp3-button bp3-minimal StyledProps--font Button--button StyledProps--main StyledProps--intent-primary StyledProps--padding-left-large StyledProps--margin-top-small StyledProps--font-size-small"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              CLOSE
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
